APF-2324-Pull request comments fixes